<resources>
    <string name="app_name">Parcial1</string>

    <string name="nombre">Ingrese su nombre</string>
    <string name="titulo">BIENVENIDOS</string>
    <string name="apellido">Ingrese su apellido</string>
    <string name="ingresar">ingresar</string>
    <string name="regresar">Regresar</string>

    <string name="salir">Salir</string>
    <string name="menu">Menu</string>

    <string name="calculadora">CALCULADORA</string>
    <string name="reproductorM">REPRODUCTOR DE MUSICA</string>
    <string name="reproductorv">REPRODUCTOR DE VIDEO</string>
    <string name="sensor">Sensor de proximidad</string>
    <string name="acercaDe">ACERCA DE</string>
    <string name="suma">+</string>
    <string name="resta">-</string>
    <string name="mult">*</string>
    <string name="division">/</string>
    <string name="pantalla">Principal</string>
    <string name="Sensor">SENSOR DE APROXMIDAD</string>
    <string name="in1">Eduardo Alexis Reyes Zavala, Kevin Anthony Ortega Ortiz, Jose Roberto Flores Flores, Jose Antonio Martinez Chavez, Marvin Josue Solorzano Cruz, Cesia Elizabeth Flores Orellana.</string>
    <string name="integrantes">INTEGRANTES</string>
    <string name="creacion">FECHA DE CREACION DEL PROYECTO</string>
    <string name="creacionr">Desde el lunes  2 de marzo hasta el jueves 4 de marzo.</string>
    <string name="resumen">RESUMEN DEL PROYECTO</string>
    <string name="resumenr">Este proyecto esta formado por varias pantallas en las cuales el usuario podra ir a ellas por medio de botones las opciones que se encuentran son: calculadora, reproductor de musica, reproductor de video y sensor de proximidad.</string>
    <string name="resul">00</string>
    <string name="nu">Numero 1</string>
    <string name="nu2">Numero 2</string>

</resources>